# www_public_test

./: .gitignore  404.html  conf.py  index.html  index.rst  mkdocs.yml  pyproject.toml  test.drawio
.github/workflows/: learn-github-actions.yml
docs/: index.md  test.md
search/: search_index.json
test/: index.html
