[tool.poetry]
name = "www-public-test"
version = "0.1.0"
description = ""
authors = ["Ryuichi UENO <ueno@soum.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.2"
mkdocs-graphviz = "^1.5.3"
mkdocs-drawio-exporter = "^0.8.0"
mkdocs-glightbox = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
